--- a/docs/professor/darlan_roque_dapieve.mdx
+++ b/docs/professor/darlan_roque_dapieve.mdx
@@ -67,19 +67,14 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Desenho Técnico",
           size: 4,
           teachers: [
             "Darlan Roque Dapieve"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: [
             "ELE2025"
           ],
@@ -87,6 +82,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
