--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -138,7 +138,8 @@ export const data = {
           subject: "Projetos e Instalações Elétricas",
           size: 2,
           teachers: [
-            "Alex Miyamoto Mussi"
+            "Alex Miyamoto Mussi",
+            "Danilo Hungaro Micheletti"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: [
