--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -88,6 +88,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Projetos Elétricos industriais",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
