--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -50,14 +50,14 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projetos Elétricos industriais",
+          subject: "Informática Instrumental",
           size: 2,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "ELE2024"
+            "ELE2025"
           ],
           time: "19:00 - 19:50",
           color: ""
@@ -132,21 +132,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Informática Instrumental",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
