--- a/docs/sala/bloco_2/laboratorio_de_desenho_tecnico___sala_5-2.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_desenho_tecnico___sala_5-2.mdx
@@ -84,7 +84,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Desenho Técnico",
+          size: 4,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
