--- a/docs/turma/ein/ein2024.mdx
+++ b/docs/turma/ein/ein2024.mdx
@@ -130,7 +130,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
           students: [
             "EIN2024"
           ],
