--- a/docs/turma/ele/ele2024.mdx
+++ b/docs/turma/ele/ele2024.mdx
@@ -11,29 +11,17 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projetos Elétricos industriais",
-          size: 2,
+          subject: "Instalações Elétricas",
+          size: 4,
           teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Legislação e Ética Profissional",
-          size: 2,
-          teachers: [
-            "André Alexandre Valentini"
+            "Alex Miyamoto Mussi",
+            "Wylliam Salviano Gongora"
           ],
           classroom: "Sala 11-2",
           students: [
             "ELE2024"
           ],
-          time: "21:00 - 21:50",
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -60,24 +48,6 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Eletrônica de Potência",
-          size: 4,
-          teachers: [
-            "Juliano da Rocha Queiroz"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
           subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
           teachers: [
@@ -93,18 +63,49 @@ export const data = {
       ]
     },
     {
-      dayName: "Sexta-Feira",
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Instalações Elétricas",
-          size: 4,
+          subject: "Projetos Elétricos industriais",
+          size: 2,
           teachers: [
-            "Alex Miyamoto Mussi",
-            "Wylliam Salviano Gongora"
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Legislação e Ética Profissional",
+          size: 2,
+          teachers: [
+            "André Alexandre Valentini"
           ],
           classroom: "Sala 11-2",
           students: [
             "ELE2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Eletrônica de Potência",
+          size: 4,
+          teachers: [
+            "Juliano da Rocha Queiroz"
+          ],
+          classroom: "",
+          students: [
+            "ELE2024",
+            "ELM2024"
           ],
           time: "19:00 - 19:50",
           color: ""
