--- a/docs/turma/ele/ele2025.mdx
+++ b/docs/turma/ele/ele2025.mdx
@@ -11,12 +11,12 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Instrumentos de Medidas Elétricas",
+          subject: "Informática Instrumental",
           size: 2,
           teachers: [
-            "Wylliam Salviano Gongora"
+            "Samuel Stephan Milczuk"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Informatica B",
           students: [
             "ELE2025"
           ],
@@ -60,6 +60,24 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Desenho Técnico",
+          size: 4,
+          teachers: [
+            "Darlan Roque Dapieve"
+          ],
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          students: [
+            "ELE2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
           subject: "Eletricidade Básica",
           size: 4,
           teachers: [
@@ -76,33 +94,15 @@ export const data = {
       ]
     },
     {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Desenho Técnico",
-          size: 4,
-          teachers: [
-            "Darlan Roque Dapieve"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "ELE2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
-    },
-    {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Informática Instrumental",
+          subject: "Instrumentos de Medidas Elétricas",
           size: 2,
           teachers: [
-            "Samuel Stephan Milczuk"
+            "Wylliam Salviano Gongora"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
