--- a/docs/turma/elm/elm2024.mdx
+++ b/docs/turma/elm/elm2024.mdx
@@ -140,8 +140,9 @@ export const data = {
           teachers: [
             "Juliano da Rocha Queiroz"
           ],
-          classroom: "Sala 13-2",
+          classroom: "",
           students: [
+            "ELE2024",
             "ELM2024"
           ],
           time: "19:00 - 19:50",
