--- a/versioned_docs/version-2025.1.2/professor/haroldo_yutaka_misunaga.mdx
+++ b/versioned_docs/version-2025.1.2/professor/haroldo_yutaka_misunaga.mdx
@@ -72,19 +72,6 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
-        },
-        {
-          subject: "Métodos e técnicas de pesquisa",
-          size: 2,
-          teachers: [
-            "Haroldo Yutaka Misunaga"
-          ],
-          classroom: "",
-          students: [
-            "TGC2025"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
         }
       ]
     },
@@ -97,11 +84,24 @@ export const data = {
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
           time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Métodos e técnicas de pesquisa",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
