--- a/versioned_docs/version-2025.1.2/professor/samuel_stephan_milczuk.mdx
+++ b/versioned_docs/version-2025.1.2/professor/samuel_stephan_milczuk.mdx
@@ -13,7 +13,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Informatica A",
           students: [
             "AGO2025 - Grupo B"
           ],
@@ -26,7 +26,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica C",
           students: [
             "AGO2025 - Grupo A"
           ],
@@ -86,7 +86,21 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Informática e Automação Comercial",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "TGC2025"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
@@ -115,19 +129,6 @@ export const data = {
             "ELE2025"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Informática e Automação Comercial",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "",
-          students: [
-            "TGC2025"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
