--- a/versioned_docs/version-2025.1.2/turma/tgc/tgc2025.mdx
+++ b/versioned_docs/version-2025.1.2/turma/tgc/tgc2025.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -47,7 +47,7 @@ export const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2025"
           ],
@@ -60,7 +60,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -78,7 +78,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -91,7 +91,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -104,12 +104,12 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Métodos e técnicas de pesquisa",
+          subject: "Informática e Automação Comercial",
           size: 2,
           teachers: [
-            "Haroldo Yutaka Misunaga"
+            "Samuel Stephan Milczuk"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -122,7 +122,7 @@ export const data = {
           teachers: [
             "Mauro César de Souza Siena"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "TGC2025"
           ],
@@ -140,7 +140,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
@@ -148,12 +148,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Informática e Automação Comercial",
+          subject: "Métodos e técnicas de pesquisa",
           size: 2,
           teachers: [
-            "Samuel Stephan Milczuk"
+            "Haroldo Yutaka Misunaga"
           ],
-          classroom: "",
+          classroom: "Sala 3-1",
           students: [
             "TGC2025"
           ],
