--- a/docs/professor/alex_miyamoto_mussi.mdx
+++ b/docs/professor/alex_miyamoto_mussi.mdx
@@ -6,7 +6,22 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Instalações Elétricas",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -28,6 +43,10 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
       dayClasses: [
         {
           subject: "Eletricidade Básica",
@@ -46,37 +65,20 @@ export const data = {
       ]
     },
     {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Projetos e Instalações Elétricas",
           size: 2,
           teachers: [
-            "Alex Miyamoto Mussi"
+            "Alex Miyamoto Mussi",
+            "Danilo Hungaro Micheletti"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2023"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "Instalações Elétricas",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
