--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -19,19 +19,6 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
-        {
-          subject: "Projetos Elétricos industriais",
-          size: 2,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
         }
       ]
     },
@@ -62,18 +49,13 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
           students: [
             "EIN2024"
           ],
           time: "07:30 - 08:20",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
@@ -90,8 +72,41 @@ export const data = {
       ]
     },
     {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Projetos Elétricos industriais",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
+    },
+    {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projetos e Instalações Elétricas",
+          size: 2,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
