--- a/docs/professor/jonathan_prass_souza.mdx
+++ b/docs/professor/jonathan_prass_souza.mdx
@@ -6,7 +6,21 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Fundamentos de Matemática",
+          size: 2,
+          teachers: [
+            "Jonathan Prass Souza"
+          ],
+          classroom: "",
+          students: [
+            "ELM2025"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -128,19 +142,6 @@ export const data = {
             "IIW2025A"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Fundamentos de Matemática",
-          size: 2,
-          teachers: [
-            "Jonathan Prass Souza"
-          ],
-          classroom: "",
-          students: [
-            "ELM2025"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
