--- a/docs/sala/bloco_2/laboratorio_de_automacao_e_robotica_industrial.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_automacao_e_robotica_industrial.mdx
@@ -31,21 +31,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Sistemas Digitais",
-          size: 2,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Automação e Robótica Industrial",
-          students: [
-            "EIN2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
