--- a/docs/sala/bloco_4/laboratorio_de_eletricidade_e_eletronica_b4.mdx
+++ b/docs/sala/bloco_4/laboratorio_de_eletricidade_e_eletronica_b4.mdx
@@ -22,19 +22,6 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
-        {
-          subject: "Instrumentos de Medidas Elétricas",
-          size: 2,
-          teachers: [
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Eletricidade e Eletrônica B4",
-          students: [
-            "ELM2025"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
         }
       ]
     },
@@ -58,7 +45,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Sistemas Digitais",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
+          students: [
+            "EIN2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -91,6 +92,19 @@ export const data = {
             "EIN2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Instrumentos de Medidas Elétricas",
+          size: 2,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
+          students: [
+            "ELM2025"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
