--- a/versioned_docs/version-2025.1.2/professor/alexandre_roberto_valcarenghi.mdx
+++ b/versioned_docs/version-2025.1.2/professor/alexandre_roberto_valcarenghi.mdx
@@ -67,6 +67,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
         }
       ]
     },
@@ -97,6 +110,19 @@ export const data = {
             "COM2023"
           ],
           time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
