--- a/versioned_docs/version-2025.1.2/professor/andre_alexandre_valentini.mdx
+++ b/versioned_docs/version-2025.1.2/professor/andre_alexandre_valentini.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "André Alexandre Valentini"
           ],
-          classroom: "Sala 9-2",
+          classroom: "Sala 11-2",
           students: [
             "ELE2024"
           ],
@@ -144,7 +144,7 @@ export const data = {
           teachers: [
             "André Alexandre Valentini"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
