--- a/versioned_docs/version-2025.1.2/professor/elias_franco.mdx
+++ b/versioned_docs/version-2025.1.2/professor/elias_franco.mdx
@@ -65,7 +65,7 @@ export const data = {
           teachers: [
             "Elias Franco"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
