--- a/versioned_docs/version-2025.1.2/professor/jhones_donizetti_mendes.mdx
+++ b/versioned_docs/version-2025.1.2/professor/jhones_donizetti_mendes.mdx
@@ -50,21 +50,7 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Geografia II",
-          size: 2,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
@@ -81,19 +67,6 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        },
-        {
-          subject: "Geografia I",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
         }
       ]
     },
@@ -101,16 +74,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Geografia I",
-          size: 1,
+          subject: "Geografia II",
+          size: 2,
           teachers: [
             "Jhones Donizetti Mendes"
           ],
-          classroom: "Sala 16-2",
+          classroom: "Sala 13-2",
           students: [
-            "IIW2024A"
+            "AGO2024"
           ],
-          time: "09:25 - 10:15",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
