--- a/versioned_docs/version-2025.1.2/professor/katia_cristiane_kobus_novaes.mdx
+++ b/versioned_docs/version-2025.1.2/professor/katia_cristiane_kobus_novaes.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "Kátia Cristiane Kobus Novaes"
           ],
-          classroom: "",
+          classroom: "Sala 12-2",
           students: [
             "ELE2025"
           ],
