--- a/versioned_docs/version-2025.1.2/professor/kleber_augusto_michalichem.mdx
+++ b/versioned_docs/version-2025.1.2/professor/kleber_augusto_michalichem.mdx
@@ -188,7 +188,7 @@ export const data = {
           teachers: [
             "Kleber Augusto Michalichem"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Educação Física / Sala 1 B2",
           students: [
             "AGO2023"
           ],
