--- a/versioned_docs/version-2025.1.2/professor/lechan_colares_santos.mdx
+++ b/versioned_docs/version-2025.1.2/professor/lechan_colares_santos.mdx
@@ -48,7 +48,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
