--- a/versioned_docs/version-2025.1.2/professor/marcos_rogerio_oliveira.mdx
+++ b/versioned_docs/version-2025.1.2/professor/marcos_rogerio_oliveira.mdx
@@ -62,7 +62,7 @@ export const data = {
           teachers: [
             "Marcos Rogério Oliveira"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
