--- a/versioned_docs/version-2025.1.2/professor/roberto_haruyoshi_ito.mdx
+++ b/versioned_docs/version-2025.1.2/professor/roberto_haruyoshi_ito.mdx
@@ -57,7 +57,7 @@ export const data = {
           teachers: [
             "Roberto Haruyoshi Ito"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
