--- a/versioned_docs/version-2025.1.2/professor/sonia_maria_mandotti.mdx
+++ b/versioned_docs/version-2025.1.2/professor/sonia_maria_mandotti.mdx
@@ -13,7 +13,7 @@ export const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
@@ -70,7 +70,7 @@ export const data = {
           teachers: [
             "Sônia Maria Mandotti"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "AGR2025"
           ],
