--- a/versioned_docs/version-2025.1.2/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -31,9 +31,9 @@ export const data = {
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "AGO2025 - Grupo A"
+            "AGO2025 - Grupo B"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -52,19 +52,6 @@ export const data = {
             "AGO2023"
           ],
           time: "15:55 - 16:45",
-          color: ""
-        },
-        {
-          subject: "Gestão, Educação e Matemática Financeira",
-          size: 2,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TGC2025"
-          ],
-          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -90,16 +77,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Gestão, Educação e Matemática Financeira",
+          subject: "Matemática III",
           size: 2,
           teachers: [
             "Mauro César de Souza Siena"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "TGC2025"
+            "AGO2023"
           ],
-          time: "21:00 - 21:50",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
