--- a/versioned_docs/version-2025.1.2/sala/bloco_1/sala_5.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_1/sala_5.mdx
@@ -9,7 +9,34 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Marketing de Eventos",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Técnicas de Vendas e Negociação",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
@@ -65,6 +92,32 @@ export const data = {
           ],
           time: "15:55 - 16:45",
           color: ""
+        },
+        {
+          subject: "Contabilidade de Custos e Formação de Preços",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Contabilidade de Custos e Formação de Preços",
+          size: 2,
+          teachers: [
+            "Keitilanger Grisa Hahn"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -95,6 +148,32 @@ export const data = {
             "IIW2023A"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Plano de Marketing",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Gestão de Compras e Estoque",
+          size: 2,
+          teachers: [
+            "Lechan Colares Santos"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
@@ -127,6 +206,32 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Ética, responsabilidade social e ambiental",
+          size: 2,
+          teachers: [
+            "André Alexandre Valentini"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Direito Empresarial e Tributário",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -157,6 +262,32 @@ export const data = {
             "IIW2023A"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Gestão de Pessoas",
+          size: 2,
+          teachers: [
+            "Haroldo Yutaka Misunaga"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Direito Empresarial e Tributário",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 5",
+          students: [
+            "TGC2024"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
