--- a/versioned_docs/version-2025.1.2/sala/bloco_2/educacao_fisica___sala_1_b2.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_2/educacao_fisica___sala_1_b2.mdx
@@ -119,6 +119,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Educação Física III",
+          size: 2,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Educação Física / Sala 1 B2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
         }
       ]
     }
