--- a/versioned_docs/version-2025.1.2/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -18,9 +18,9 @@ export const data = {
           ],
           classroom: "Laboratório de Informatica C",
           students: [
-            "AGO2025 - Grupo B"
+            "AGO2025 - Grupo A"
           ],
-          time: "13:10 - 14:00",
+          time: "15:05 - 15:55",
           color: ""
         },
         {
