--- a/versioned_docs/version-2025.1.2/sala/bloco_2/sala_11-2.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_2/sala_11-2.mdx
@@ -35,6 +35,19 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Legislação e Ética Profissional",
+          size: 2,
+          teachers: [
+            "André Alexandre Valentini"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -52,6 +65,19 @@ export const data = {
             "EIN2023"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Máquinas elétricas",
+          size: 4,
+          teachers: [
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -84,25 +110,25 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Eletrônica de Potência",
+          size: 4,
+          teachers: [
+            "Juliano da Rocha Queiroz"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Biologia 4",
-          size: 2,
-          teachers: [
-            "Gabriele Antico Freiria"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "Filosofia 3",
           size: 1,
@@ -128,6 +154,19 @@ export const data = {
           ],
           time: "11:05 - 11:55",
           color: ""
+        },
+        {
+          subject: "Equipamentos elétricos e Sistema elétricos de potência",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -145,6 +184,20 @@ export const data = {
             "EIN2023"
           ],
           time: "11:05 - 11:55",
+          color: ""
+        },
+        {
+          subject: "Instalações Elétricas",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
