--- a/versioned_docs/version-2025.1.2/sala/bloco_2/sala_8-2.mdx
+++ b/versioned_docs/version-2025.1.2/sala/bloco_2/sala_8-2.mdx
@@ -48,6 +48,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Ética profissional, cidadania e direitos humanos",
+          size: 3,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -118,19 +131,6 @@ export const data = {
           ],
           time: "14:00 - 14:50",
           color: ""
-        },
-        {
-          subject: "Educação ambiental e desenvolvimento sustentável",
-          size: 4,
-          teachers: [
-            "Karina Dias Espartosa"
-          ],
-          classroom: "Sala 8-2",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
         }
       ]
     },
@@ -162,6 +162,19 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "PCCC 3 - Modalidades da educação e inclusão escolar",
+          size: 3,
+          teachers: [
+            "Marcia Aparecida Barbosa"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -192,6 +205,19 @@ export const data = {
             "AGO2025"
           ],
           time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Genética molecular",
+          size: 4,
+          teachers: [
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:00 - 19:50",
           color: ""
         }
       ]
@@ -236,6 +262,19 @@ export const data = {
             "AGO2025"
           ],
           time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Anatomia e morfologia vegetal",
+          size: 3,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_1"
+          ],
+          time: "19:50 - 20:40",
           color: ""
         }
       ]
