--- a/versioned_docs/version-2025.1.2/turma/tgc/tgc2024.mdx
+++ b/versioned_docs/version-2025.1.2/turma/tgc/tgc2024.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -29,7 +29,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -47,7 +47,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -60,7 +60,7 @@ export const data = {
           teachers: [
             "Keitilanger Grisa Hahn"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -78,7 +78,7 @@ export const data = {
           teachers: [
             "Keyla Christina Almeida Portela"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -91,7 +91,7 @@ export const data = {
           teachers: [
             "Lechan Colares Santos"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -109,7 +109,7 @@ export const data = {
           teachers: [
             "André Alexandre Valentini"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -122,7 +122,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -140,7 +140,7 @@ export const data = {
           teachers: [
             "Haroldo Yutaka Misunaga"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
@@ -153,7 +153,7 @@ export const data = {
           teachers: [
             "José Jurandir Pereira Junior"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 5",
           students: [
             "TGC2024"
           ],
