--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -139,7 +139,7 @@ export const data = {
           size: 2,
           teachers: [
             "Alex Miyamoto Mussi",
-            "Danilo Hungaro Micheletti"
+            "Wylliam Salviano Gongora"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: [
