--- a/docs/turma/ele/ele2024.mdx
+++ b/docs/turma/ele/ele2024.mdx
@@ -15,7 +15,7 @@ export const data = {
           size: 4,
           teachers: [
             "Alex Miyamoto Mussi",
-            "Wylliam Salviano Gongora"
+            "Danilo Hungaro Micheletti"
           ],
           classroom: "Sala 11-2",
           students: [
