--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -19,6 +19,20 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Instalações Elétricas",
+          size: 4,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "ELE2024"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
         }
       ]
     },
@@ -35,7 +49,7 @@ export const data = {
           students: [
             "EIN2025 - Grupo A"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -53,7 +67,7 @@ export const data = {
           students: [
             "EIN2024"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -91,22 +105,7 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Projetos e Instalações Elétricas",
-          size: 2,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "EIN2023"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
