--- a/docs/professor/vinicius_de_souza_lamego.mdx
+++ b/docs/professor/vinicius_de_souza_lamego.mdx
@@ -44,11 +44,11 @@ export const data = {
           teachers: [
             "Vinicius de Souza Lamego"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 6-2",
           students: [
             "EIN2025"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
