--- a/docs/professor/wylliam_salviano_gongora.mdx
+++ b/docs/professor/wylliam_salviano_gongora.mdx
@@ -6,22 +6,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Instalações Elétricas",
-          size: 4,
-          teachers: [
-            "Alex Miyamoto Mussi",
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "ELE2024"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -79,6 +64,20 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Projetos e Instalações Elétricas",
+          size: 2,
+          teachers: [
+            "Alex Miyamoto Mussi",
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2023"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
         {
           subject: "Instrumentos de Medidas Elétricas",
           size: 2,
