--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -42,6 +42,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Física 1",
+          size: 2,
+          teachers: [
+            "Vinicius de Souza Lamego"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "EIN2025"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Mecanização Agrícola",
           size: 2,
           teachers: [
