--- a/docs/turma/ein/ein2025.mdx
+++ b/docs/turma/ein/ein2025.mdx
@@ -68,6 +68,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Física 1",
+          size: 2,
+          teachers: [
+            "Vinicius de Souza Lamego"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "EIN2025"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Eletricidade e Medidas Elétricas",
           size: 3,
           teachers: [
@@ -77,7 +90,7 @@ export const data = {
           students: [
             "EIN2025 - Grupo A"
           ],
-          time: "07:30 - 08:20",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -90,20 +103,7 @@ export const data = {
           students: [
             "EIN2025 - Grupo B"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Física 1",
-          size: 2,
-          teachers: [
-            "Vinicius de Souza Lamego"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "EIN2025"
-          ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
